# gr3m-tools

./: Cargo.toml  build.rs  license.txt  readme.md
csrc/: test.c
go/: libgofuncs.h  main.go
src/: lib.rs  main.rs  mod.rs
src/core/: mod.rs
src/crypto/: hybrid.rs  mod.rs  pqc.rs
