[package]
name = "gr3m-tools"
version = "0.1.0"
edition = "2024"

[dependencies]

#  Crypto
pqcrypto-kyber = "0.8.0"
pqcrypto-traits = "0.3.5"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
blake3 = "1.5.0"
argon2 = "0.5.3"

[build-dependencies]
cc = "1.0"
